# aria2-wheel

./: .gitignore  CHANGELOG.md  README.md  hatch_build.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: publish.yml
src/aria2/: __init__.py
src/aria2c/: __init__.py  __main__.py
tests/: test_cmd.py
